aspwelcomeapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspwcapp
  namespace: aspwcapp
spec:
  selector:
    app: aspwcapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
