aspwelcomeapp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspwcapp-ingress
  namespace: aspwcapp
spec:
  rules:
  - host: aspwcapp.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspwcapp
            port:
              number: 8080
